# Code_Normativa

./: .gitignore  Espectro_NEC.py  LICENSE  README.md  app.py  build_binary.py  build_exe.ps1  export_utilities.py  install.ps1  main.py  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-lock.txt  requirements.txt  run_app.py  seismic_calculations.py  ui_components.py
.github/workflows/: ci.yml
examples/: example_soil_A.py  example_soil_B.py  example_soil_C.py
src/espectro_nec/: __init__.py  app.py  constants.py  export_utilities.py  main.py  ui_components.py
tests/: conftest.py  test_seismic_calculations.py
