[project]
name = "espectro-nec"
version = "0.1.0"
description = "Seismic spectrum calculator according to Ecuadorian seismic code (NEC)"
authors = [{name = "Developer", email = "dev@example.com"}]
dependencies = ["numpy>=1.26,<3.0", "matplotlib>=3.8,<3.10"]
readme = "README.md"
license = "MIT"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest", "pyinstaller"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["espectro_nec*"]